# Superior-Space-Fighters

./: Cargo.toml  README.md  bacon.toml  lore.md  remove_dependencies.sh  rust-toolchain.toml  setup_dependencies.sh
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  spike.md  task.md  user_story.md
.github/workflows/: ci.yml
src/: assets.rs  components.rs  events.rs  main.rs  plugins.rs  queries.rs  query_data.rs  query_filters.rs  resources.rs  states.rs  systems.rs
src/assets/: images.rs  sounds.rs
src/assets/images/: planets.rs  space.rs  space_ships.rs  space_stations.rs  starships.rs  user_interface.rs
src/assets/sounds/: starships.rs  weapons.rs
src/components/: blaster.rs  exotic.rs  mine.rs  person.rs  planet.rs  player.rs  player_blaster.rs  player_exotic.rs  player_starship.rs  player_torpedo.rs  queries.rs  save_load_pipelines.rs  ship.rs  space.rs  starship.rs  starships.rs  station.rs  target.rs  torpedo.rs  user_interface.rs  weapon.rs  weapons.rs
src/components/queries/: mutable_target_query.rs  player_starship_filter.rs  player_starship_query.rs  (+3 more)
src/events/: audio_events.rs  collision_events.rs  despawn_sprite_event.rs  game_events.rs  game_state_events.rs  logging_event.rs  pause_audio_event.rs  play_audio_event.rs  spawn_audio_event.rs  spawn_planet_sprite_event.rs  spawn_player_sprite_event.rs  spawn_sprite_event.rs  spawn_starship_sprite_event.rs  ui_selected_weapon_event.rs  user_interface_event.rs  user_interface_events.rs
src/plugins/: ai.rs  audio.rs  camera.rs  collisions.rs  core.rs  events.rs  game_resources_plugin.rs  game_running_plugin.rs  game_start_plugin.rs  game_startup_plugin.rs  game_user_interface_plugin.rs  groups.rs  hello_plugin.rs  music.rs  player.rs  resources.rs  run_conditions.rs  running.rs  save_load_game.rs  sound_effects.rs  space.rs  sprite.rs  start.rs  trading.rs  user_interface.rs  weapons.rs
src/queries/: button_interaction_query.rs  camera_queries.rs  filters.rs  game_objects_query.rs  main_menu_parent_queries.rs  no_sprite_query.rs  pause_menu_parent_queries.rs  player_blaster_queries.rs  player_exotic_queries.rs  player_mine_queries.rs  player_starship_queries.rs  player_torpedo_queries.rs  space_queries.rs  starship_queries.rs  target_queries.rs  weapon_selection_parent_queries.rs  weapon_ui_queries.rs
src/query_data/: starship_query.rs  target_arrow_query.rs  target_query.rs
src/query_filters/: player_starship_filter.rs  target_arrow_filter.rs  target_filter.rs
src/resources/: ammunition.rs  blaster_ammunition.rs  camera_settings.rs  chunks.rs  combat_guild_reputation.rs  exotic_ammunition.rs  exploration_guild_reputation.rs  fleet_credits.rs  game_state.rs  greet_people.rs  guild_reputation.rs  mine_ammunition.rs  music.rs  my_gamepad.rs  projectile_ammunition.rs  projectile_ammunition_maximum.rs  projectile_ammunition_recharge.rs  projectile_ammunition_resource.rs  projectile_fire_rate.rs  sector_size.rs  selected_weapon.rs  space_zone_border.rs  targeting_settings.rs  targetting_settings.rs  torpedo_ammunition.rs  trading_guild_reputation.rs  weapon_selection.rs
src/states/: core_states.rs
src/systems/: add_people.rs  audio.rs  camera.rs  chunks.rs  core.rs  event_handlers.rs  events.rs  gamepad.rs  greet_people.rs  music.rs  planets.rs  player.rs  player_movement.rs  save_load_game.rs  ships.rs  space.rs  spawn_laser.rs  spawn_mine.rs  spawn_player.rs  spawn_sprite.rs  starships.rs  stations.rs  trading.rs  user_interface.rs  weapons.rs
(+382 files in other folders)
