[package]
name = "superior-space-fighters"
version = "0.4.0"
authors = ["Skippy <steelstone3@gmail.com>"]
edition = "2021"
homepage = "https://github.com/Steelstone3/Superior-Space-Fighters"
repository = "https://github.com/Steelstone3/Superior-Space-Fighters"
license = "GPLv3"
readme = "README.md"
include = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12", features = ["wayland"] }
float-lerp = "0"
rand="0"
rand_derive2 ="0"
rayon = "1"
# rstest = "0"
# bevy_iced = "0.4"

[workspace]
resolver = "2"

# No optimisation for better debugging. Set to 1 for some optimisation
[profile.dev]
opt-level = 0

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
