[package]
name = "superior-space-fighters"
version = "0.6.0"
authors = ["Skippy <steelstone3@gmail.com>", "Demengies <Demengies@gmail.com>"]
edition = "2021"
homepage = "https://github.com/Steelstone3/Superior-Space-Fighters"
repository = "https://github.com/Steelstone3/Superior-Space-Fighters"
license = "GPLv3"
readme = "README.md"
include = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "linux")'.dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "x11",
    "wayland",
    "bevy_ui",
    "png",
    "vorbis",
    "bevy_gizmos",
    "default_font",
    "multi_threaded",
    "bevy_state",
] }
wayland-sys = "0.31"

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "bevy_ui",
    "png",
    "vorbis",
    "bevy_gizmos",
    "default_font",
    "multi_threaded",
    "bevy_state",
] }
bevy_save = { git = "https://github.com/perry-blueberry/bevy_save", branch = "update-to-bevy-0.14" }
float-lerp = "0"
rand = "0"
rand_derive2 = "0"
rayon = "1"
rstest = "0"

[workspace]
resolver = "2"

# No optimisation for better debugging. Set to 1 for some optimisation
[profile.dev]
opt-level = 0

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
